[project]
name = "crisis-management"
version = "0.1.0"
description = "chat bot for professional deal with crisis situations in crisis communications"
authors = [
    {name = "OnishchenkoDaria",email = "daria.onishchenko.57@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tiktoken (>=0.7.0,<0.8.0)",
    "fastapi[all] (>=0.128.3,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
